# vgi-benchmarks

./: .gitignore  LICENSE  README.md  pyproject.toml
cases/: scalar_multiply.json  scalar_upper_case.json
cases-extended/: README.md  aggregate_avg.json  aggregate_sum.json  table_constant_columns.json  table_in_out_echo.json  table_in_out_sum_all.json  table_sequence.json
docs/: WINDOWS.md
languages/: cpp.json  go.json  java.json  kotlin.json  python.json  rust.json  typescript.json
results/_fresh3lang/2026-06-29T0433-7e4c00f-dirty/: env.json  manifest.json  results.jsonl
results/_fresh3lang/2026-06-29T0433-7e4c00f-dirty/raw/_group_go_launch/: launch-go-launch-group.json
results/_fresh3lang/2026-06-29T0433-7e4c00f-dirty/raw/_group_java_launch/: launch-java-launch-group.json
results/_fresh3lang/2026-06-29T0433-7e4c00f-dirty/raw/scalar_multiply/: measured-t1-00.json  measured-t1-01.json  measured-t1-02.json  measured-t1-03.json  measured-t1-04.json  measured-t1-05.json  measured-t1-06.json  measured-t1-07.json  measured-t4-00.json  measured-t4-01.json  measured-t4-02.json  measured-t4-03.json  measured-t4-04.json  (+3 more)
results/_freshrust/2026-06-29T0446-7e4c00f-dirty/: env.json  manifest.json  results.jsonl
scripts/: make_report.py  run_all.sh  smoke.sh
scripts/windows/: vgi-java-launcher.c
vgi_bench/: __init__.py  __main__.py  adapter.py  aggregate.py  cli.py  config.py  db_session.py  duckdb_runner.py  fingerprint.py  models.py  parallelism.py  payload.py  profile_parse.py  rpc_timing.py  runner.py  schema.py  stats.py  templating.py  writers.py
(+49 files in other folders)
